# HIL-toolkit

./: .gitignore  Notes_for_futures.md  install_liblsl.sh  pyproject.toml  setup.py
.github/: docs-deployment.yaml
.github/workflows/: docs-deployment.yaml  docs-testing.yaml  static.yml  updated_pages.yaml
HIL/API/optimization/: HIL_api.py  pydantic_models.py
HIL/Exo_communication/: udp_communication.py  utils.py
HIL/optimization/: BO.py  HIL.py  extract_cost.py  kernel.py
HIL/optimization/HIL/: HIL.py  HIL_API.py  HIL_CLI.py
HIL/plotting/: realtime.py
configs/: ECG_config.yml  api-optimization-config.yml
docs/: requirements.txt
docs/source/: CLI.md  HIL.Exo_communication.rst  HIL.optimization.rst  HIL.plotting.rst  Introduction.md  Setup.md  conf.py
docs/source/Modules/: cost-acquisition.md  cost-estimation.md
scripts/: ECG_optimization.py  HIL_api.py  HIL_api_client.py  collect_polar.py  metabolic_optimization.py  search_polar.py  send_rmssd.py
tests/: conftest.py  test_HIL.py  test_communication.py  test_kernels.py  test_optimization.py  test_polar.py
